# Aindexer

./: .gitignore  AGENTS.md  AGENT_QUICKSTART.md  LICENSE  PROJECT_CONTEXT_APPEND_LOG.md  README.md  TUTORIAL.md  opencode.json  package_share.bat  package_windows_onedir.bat  patch.diff  start_literature_indexer.bat  start_literature_indexer_classic.bat  start_literature_indexer_debug.bat  start_literature_indexer_hidden.bat  start_literature_indexer_v2.bat  计划更新点.txt
PROJECT_docs/: AGENT_QUICKSTART.md  FRONTEND_DESIGN_SYSTEM.md  PROJECT_CONTEXT_APPEND_LOG.md  README.md  UI_COMPONENTS.md  V2_FRONTEND_INTEGRATION_PLAN.md
backend/: AGENTS.md  desktop_main.py  desktop_v4_sidecar.py  launcher_hidden.py  requirements.txt
chat_with_llm_tasks/: 20260316_chat_v0_plan.md  MASTER_PLAN.md  V1_DETAILED_PLAN.md
demo/: README.md
desktop-v4/: README.md  package-lock.json  package.json
desktop-v4/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
desktop-v4/src-tauri/capabilities/: default.json
desktop-v4/src-tauri/src/: main.rs
doc/: TUTORIAL.md  chat_with_llm_md.txt
docs/: CURRENT_STATE.md  FRONTEND_DESIGN.md  v3-refactor-plan.md
frontend-v3/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
homepage-site/: README.md  _headers  index.html
scripts/: AGENTS.md  allocate_port.py  build_windows_onedir.py  check_v2_layout.py  free_port_8000.py  opencode-proxy.ps1  package_share.py  pyi_rth_dll_path.py  test_chat_v0.py  test_chat_v0_live.py  test_frontend_buttons.py  test_v2_dashboard_runtime.mjs
(+288 files in other folders)
