[package]
name = "aindexer-desktop-v4"
version = "0.1.1"
description = "Aindexer V4 desktop shell"
authors = ["Aindexer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "=2.5.1", features = [] }
tauri-plugin-dialog = "=2.2.2"
tauri-plugin-fs = "=2.3.0"
